[gd_scene load_steps=19 format=3 uid="uid://dyg166mu47c1"]

[ext_resource type="Script" path="res://dialog_tree/assets/pink_hair_character/pink_hair_character.gd" id="1_bman8"]
[ext_resource type="Texture2D" uid="uid://cov4h6vh32ta1" path="res://dialog_tree/assets/pink_hair_character/pink_hair_character_preview.png" id="1_fwdcm"]
[ext_resource type="Texture2D" uid="uid://b3cfhdl2kkrxf" path="res://dialog_tree/assets/pink_hair_character/parts/BackHair.PNG" id="2_w4vtk"]
[ext_resource type="Texture2D" uid="uid://de80gjojee3cf" path="res://dialog_tree/assets/pink_hair_character/parts/Bang.PNG" id="3_4so5s"]
[ext_resource type="Texture2D" uid="uid://btb7at8qevnph" path="res://dialog_tree/assets/pink_hair_character/parts/Body.PNG" id="4_ouc4s"]
[ext_resource type="Texture2D" uid="uid://bscc087nexc2r" path="res://dialog_tree/assets/pink_hair_character/parts/EyesClosed.PNG" id="5_bgynh"]
[ext_resource type="Texture2D" uid="uid://miws8vh4a7r7" path="res://dialog_tree/assets/pink_hair_character/parts/EyesOpen.PNG" id="6_irkmy"]
[ext_resource type="Texture2D" uid="uid://cadrpc7lj1ju8" path="res://dialog_tree/assets/pink_hair_character/parts/Head.PNG" id="7_2wbcy"]
[ext_resource type="Texture2D" uid="uid://dnmrsvvnjvayu" path="res://dialog_tree/assets/pink_hair_character/parts/MouthO.PNG" id="8_1pj3p"]
[ext_resource type="Texture2D" uid="uid://casfi01jkja5a" path="res://dialog_tree/assets/pink_hair_character/parts/MouthSmile.PNG" id="9_opypf"]
[ext_resource type="Texture2D" uid="uid://bspu5xr165rmj" path="res://dialog_tree/assets/pink_hair_character/parts/MouthWide.PNG" id="10_e1txc"]
[ext_resource type="Texture2D" uid="uid://dw8jso1xndyww" path="res://dialog_tree/assets/pink_hair_character/parts/Neck.PNG" id="11_0x45e"]
[ext_resource type="Texture2D" uid="uid://c4rs3m7rli3n5" path="res://dialog_tree/assets/pink_hair_character/parts/ShirtCollar.PNG" id="12_r0dua"]

[sub_resource type="Animation" id="Animation_pga88"]
resource_name = "Idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Body/Neck/Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2, 3.5),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0174533, -0.0174533, 0.0174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.00349066, -0.00349066, 0.00349066]
}

[sub_resource type="Animation" id="Animation_ye8v3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Body/Neck/Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yb0aa"]
_data = {
"Idle": SubResource("Animation_pga88"),
"RESET": SubResource("Animation_ye8v3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tq6ip"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_c2qio"]
graph_offset = Vector2(-482, 0)
nodes/Animation/node = SubResource("AnimationNodeAnimation_tq6ip")
nodes/Animation/position = Vector2(100, 120)
node_connections = [&"output", 0, &"Animation"]

[node name="PinkHairCharacter" type="Node2D"]
z_as_relative = false
script = ExtResource("1_bman8")

[node name="PinkHairCharacterPreview" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
texture = ExtResource("1_fwdcm")
metadata/_edit_lock_ = true

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2(0, 3)

[node name="Bang" type="Polygon2D" parent="Skeleton2D"]
z_index = 10
position = Vector2(-9, -260)
offset = Vector2(-273, -164)
texture = ExtResource("3_4so5s")
skeleton = NodePath("..")
polygon = PackedVector2Array(109.877, 11.1111, 230.864, -11.1111, 307.407, 74.6913, 263.58, 250.617, 127.16, 369.753, 40.7408, 373.457, -14.8148, 296.296, 30.8642, 124.074, 129.932, 174.15)
uv = PackedVector2Array(109.877, 11.1111, 230.864, -11.1111, 307.407, 74.6913, 263.58, 250.617, 127.16, 369.753, 40.7408, 373.457, -14.8148, 296.296, 30.8642, 124.074, 129.932, 174.15)
polygons = [PackedInt32Array(0, 1, 8, 7), PackedInt32Array(1, 2, 3, 8), PackedInt32Array(7, 6, 5, 8), PackedInt32Array(8, 3, 4, 5)]
bones = ["Body", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck/Head", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck/Head/BangStart", PackedFloat32Array(1, 1, 1, 0.5, 0, 0, 0, 0.5, 0.5), "Body/Neck/Head/BangStart/BangEnd", PackedFloat32Array(0, 0, 0, 0, 1, 1, 1, 0, 0.5), "Body/Neck/Head/BackHair", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0)]
internal_vertex_count = 1

[node name="BackHair" type="Polygon2D" parent="Skeleton2D"]
z_index = -10
position = Vector2(-248, -84)
texture = ExtResource("2_w4vtk")
skeleton = NodePath("..")
polygon = PackedVector2Array(144.444, -6.79012, 70.9877, -3.7037, 11.1111, 56.0185, -13.5803, 150.617, 58.0247, 230.247, 188.272, 266.049, 224.691, 154.938, 200, 36.4197, 102.469, 108.025)
uv = PackedVector2Array(144.444, -6.79012, 70.9877, -3.7037, 11.1111, 56.0185, -13.5803, 150.617, 58.0247, 230.247, 188.272, 266.049, 224.691, 154.938, 200, 36.4197, 102.469, 108.025)
polygons = [PackedInt32Array(1, 2, 8, 0), PackedInt32Array(0, 7, 6, 8), PackedInt32Array(8, 4, 5, 6), PackedInt32Array(8, 2, 3, 4)]
bones = ["Body", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck/Head", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck/Head/BangStart", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck/Head/BangStart/BangEnd", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "Body/Neck/Head/BackHairStart", PackedFloat32Array(1, 1, 0.5, 0, 0, 0, 0.5, 1, 0.5), "Body/Neck/Head/BackHairStart/BackHairEnd", PackedFloat32Array(0, 0, 0.5, 1, 1, 1, 0.5, 0, 1)]
internal_vertex_count = 1

[node name="Body" type="Bone2D" parent="Skeleton2D"]
position = Vector2(0, 355)
rotation = 0.0349066
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(1, 0, 0, 1, 0, 355)

[node name="Neck" type="Bone2D" parent="Skeleton2D/Body"]
position = Vector2(0, -184)
rest = Transform2D(1, 0, 0, 1, 0, -184)

[node name="Head" type="Bone2D" parent="Skeleton2D/Body/Neck"]
position = Vector2(0, -61)
scale = Vector2(0.999998, 0.999998)
rest = Transform2D(1, 0, 0, 1, 0, -61)

[node name="BangStart" type="Bone2D" parent="Skeleton2D/Body/Neck/Head"]
position = Vector2(0, -374)
rest = Transform2D(1, 0, 0, 1, 0, -374)

[node name="BangEnd" type="Bone2D" parent="Skeleton2D/Body/Neck/Head/BangStart"]
position = Vector2(-163, 6)
rest = Transform2D(1, 0, 0, 1, -163, 6)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Head" type="Sprite2D" parent="Skeleton2D/Body/Neck/Head"]
z_index = 5
position = Vector2(0, -245.5)
texture = ExtResource("7_2wbcy")

[node name="Eyes" type="Node2D" parent="Skeleton2D/Body/Neck/Head"]
z_index = 5
position = Vector2(0, -223.5)

[node name="EyesClosed" type="Sprite2D" parent="Skeleton2D/Body/Neck/Head/Eyes"]
visible = false
position = Vector2(0, 22.5)
texture = ExtResource("5_bgynh")

[node name="EyesOpen" type="Sprite2D" parent="Skeleton2D/Body/Neck/Head/Eyes"]
texture = ExtResource("6_irkmy")

[node name="Mouth" type="Node2D" parent="Skeleton2D/Body/Neck/Head"]
z_index = 5
position = Vector2(0, -75)

[node name="MouthO" type="Sprite2D" parent="Skeleton2D/Body/Neck/Head/Mouth"]
visible = false
texture = ExtResource("8_1pj3p")

[node name="MouthSmile" type="Sprite2D" parent="Skeleton2D/Body/Neck/Head/Mouth"]
texture = ExtResource("9_opypf")

[node name="MouthWide" type="Sprite2D" parent="Skeleton2D/Body/Neck/Head/Mouth"]
visible = false
texture = ExtResource("10_e1txc")

[node name="BackHairStart" type="Bone2D" parent="Skeleton2D/Body/Neck/Head"]
position = Vector2(-92, -170)
rest = Transform2D(1, 0, 0, 1, -92, -170)

[node name="BackHairEnd" type="Bone2D" parent="Skeleton2D/Body/Neck/Head/BackHairStart"]
position = Vector2(-45, 107)
rest = Transform2D(1, 0, 0, 1, -45, 107)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Neck" type="Sprite2D" parent="Skeleton2D/Body/Neck"]
position = Vector2(0, -37)
texture = ExtResource("11_0x45e")

[node name="ShirtCollar" type="Sprite2D" parent="Skeleton2D/Body"]
position = Vector2(0, -211)
texture = ExtResource("12_r0dua")

[node name="Body" type="Sprite2D" parent="Skeleton2D/Body"]
z_index = -5
position = Vector2(0, -126)
texture = ExtResource("4_ouc4s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yb0aa")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_c2qio")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="BlinkTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ClosedEyesTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
